--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
   <h3>Notre équipe</h3>
   <div class="grid">
     <div class="card">
-      <img src="/DSC_0294.jpg" alt="Maître Damien Mukesi" loading="lazy">
+      <img src="/images/DSC_0294.jpg" alt="Maître Damien Mukesi" loading="lazy">
       <h4>Maître Damien Mukesi</h4>
       <p>Avocat principal – Barreau du Lualaba</p>
     </div>
     <div class="card">
-      <img src="/DSC_2256.jpg" alt="Maître Franck Muteb" loading="lazy">
+      <img src="/images/DSC_2256.jpg" alt="Maître Franck Muteb" loading="lazy">
       <h4>Maître Franck Muteb</h4>
       <p>Droit civil & affaires</p>
     </div>
